# Code-Generator-Web-app

./: .gitignore  Readme.md
backend/: pyproject.toml  server.py
backend/src/: ai_generator.py  app.py
backend/src/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/auth/: AuthenticationPage.jsx  ClerkProviderWithRoutes.jsx
frontend/src/challenge/: MCQgenerator.jsx  challengeGenerator.jsx
frontend/src/history/: HistoryPanel.jsx
frontend/src/layout/: Layout.jsx
frontend/src/utils/: api.js
